<resources>
    <string name="app_name">NGV247 - Đối tác</string>
    <string name="home_home">Home</string>
    <string name="home_maid_around">Nearby work</string>
    <string name="home_your_tasks">Work management</string>
    <string name="home_history">Work history</string>
    <string name="home_copy_right"> Any Time - Any Where</string>
    <string name="more_sign_in">Sign In</string>
    <string name="auth">You account has been logged into from a new device</string>
    <string name="terms">Terms of use</string>
    <string name="terms_btn_ok">OK</string>
    <string name="content_null">No content</string>
    <string name="work_management">Work management</string>
    <string name="posted_work">Processing</string>
    <string name="assigned">Assigned</string>
    <string name="running_work">Running</string>
    <string name="awaiting_assignment">Awaiting assignment</string>
    <string name="pending_confirmation">Awaiting confirmation</string>
    <string name="exceeded">Expired</string>
    <string name="send_direct">Sent directly</string>
    <string name="tool_work">Bring your cleaning supplies</string>
    <string name="cancel_work">Delete work</string>
    <string name="denied">Refuse</string>
    <string name="hourly_pay">Hourly pay</string>
    <string name="accepted_successfully">Accepted successfully!</string>
    <string name="denied_successfully">Denied successfully!</string>
    <string name="notification">Notification</string>
    <string name="checknumberjobpost">Your posts would be within ten!</string>
    <string name="notification_refuse_job_post">Are you sure you want to refuse this work?</string>
    <string name="notification_del_job_post">Are you sure you want to delete this work?</string>
    <string name="notification_pass_del_job_post">Deleted successfully!</string>
    <string name="note_cancel_work">You can cancel your accepted work within 24 hours before starting. Please call your host or company to confirm your change.</string>
    <string name="done">Just posted</string>
    <string name="vnd">VND</string>
    <string name="sign_in_user_name">Username</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_sign_in">Sign in</string>
    <string name="sign_in_forget_password">Forgot password?</string>
    <string name="sign_in_sign_now">Sign up</string>
    <string name="sign_in_by">Login with</string>
    <string name="sign_up_confirm_password">Confirm password</string>
    <string name="sign_up_next">Next</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_full_name">Full name</string>
    <string name="sign_up_gender">Gender</string>
    <string name="sign_up_age">Age</string>
    <string name="sign_up_phone_number">Phone number</string>
    <string name="sign_up_address">Address</string>
    <string name="sign_up">Register</string>
    <string name="sign_up_note">Note</string>
    <string name="sign_up_notification">Request sent successfully! NGV247 will contact you soon. Thank you!</string>
    <string name="sign_up_fill_name">Please enter your name</string>
    <string name="sign_up_fill_email">Please enter your email address</string>
    <string name="sign_up_fill_phone">Please enter your phone number</string>
    <string name="sign_up_length_phone">Phone numbers must be 10 or 11 characters long</string>
    <string name="sign_up_email_wrong">Email format is incorrect</string>
    <string name="pro_file_gender_male">Male</string>
    <string name="pro_file_gender_female">Female</string>
    <string name="more_job_statistic">General statistic</string>
    <string name="more_notification">Notification</string>
    <string name="more_languge">Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="more_share_app_Gv24">Share NGV247</string>
    <string name="more_follow_Gv24_on_facebook">Follow us on Facebook</string>
    <string name="more_contact">Contact</string>
    <string name="gender_men">Male</string>
    <string name="gender_women">Female</string>
    <string name="signout">Sign Out</string>
    <string name="signoutContent">Are you sure to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="default_language">Default</string>
    <string name="more">More</string>
    <string name="rate">Evaluate</string>
    <string name="completed">Completed</string>
    <string name="to">to</string>
    <string name="send">Send</string>
    <string name="soonupdated">Soon updated!</string>
    <string name="completedjob">Work history</string>
    <string name="completedowner">Former hosts</string>
    <string name="before">%s ago</string>
    <plurals name="day">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <string name="hour">/ 1 hour</string>
    <plurals name="minute">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <plurals name="second">
        <item quantity="one">second</item>
        <item quantity="other">seconds</item>
    </plurals>
    <string name="worklist">Worklist</string>
    <string name="rangetime">Please double check time chosen!</string>
    <string name="payment">Payment</string>
    <string name="description">DESCRIPTION</string>
    <string name="owner">OWNER</string>
    <string name="total">Total earnings</string>
    <string name="history_work">Work history</string>
    <string name="waiting_work">Processing</string>
    <string name="congviecdangcho">Awaiting</string>
    <plurals name="million">
        <item quantity="one">million</item>
        <item quantity="other">millions</item>
    </plurals>
    <string name="million_zero">million</string>
    <string name="contact">Contact</string>
    <string name="about">About us</string>
    <string name="btnCall">Call</string>
    <string name="btnEmail">Email</string>
    <string name="no_email_client">There are no email clients installed.</string>
    <string name="enter_phonenumber">Enter a phone number</string>
    <string name="okAlert">Ok</string>
    <string name="address_title">Address:</string>
    <string name="GPSTitle">GPS settings</string>
    <string name="GPSContent">GPS is disabled. Do you want to enable GPS?</string>
    <string name="setting">Setting</string>
    <string name="huy">Cancel</string>
    <string name="send_require">Request</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="term_title">Terms of use</string>
    <string name="usename_empty">Please fill in your username</string>
    <string name="emai_empty">Please fill in your email</string>
    <string name="email_wrong">Invalid email address</string>
    <string name="forgot_password_success">A password reset link is sent to your email.</string>
    <string name="forgot_password_failed">Failed! Please double check your email and account.</string>
    <string name="payment_date">Payment date:</string>
    <string name="timework">Time of working:</string>
    <string name="totalprice">Total:</string>
    <string name="accountbalance">Account balance</string>
    <string name="noInternet">No internet connection</string>
    <string name="retry">RETRY</string>
    <string name="loading">Loading...</string>
    <string name="choose_this_work">Choose this work</string>
    <string name="nearby_work">Nearby work</string>
    <string name="search">Search</string>
    <string name="distance">Distance</string>
    <string name="applicant_profile">Applicant profile</string>
    <string name="report">Report</string>
    <string name="comment">COMMENT</string>
    <string name="no_comments">There are no comments</string>
    <string name="back">Back</string>
    <string name="reportsuccess">Report sent successfully!</string>
    <string name="reportfail">Failed to send report!</string>
    <string name="commentsuccess">Comment sent successfully!</string>
    <string name="commentfail">Failed to send comment!</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_ok">Confirm successfully</string>
    <string name="confirm_failed">Failed to confirm</string>
    <string name="confirm_cast">Click OK to confirm the right amount you receive</string>
    <string name="choose_work_success">Work chosen successfully!</string>
    <string name="choose_work_failed">Failed to choose your work!</string>
    <string name="address_not_found">Address not found!</string>
    <string name="location_not_found">Location not found</string>
    <string name="search_location">Search location</string>
    <plurals name="work">
        <item quantity="one">work</item>
        <item quantity="other">works</item>
    </plurals>
    <string name="error">Error! Please try again!</string>
    <string name="fill_all_data">Please, complete all information.</string>
    <string name="report_activity">Report</string>
    <string name="enter_comment">Please enter the message</string>
    <string name="failed">Failed</string>
    <string name="refuse_work">Refuse work</string>
    <string name="choose_work">Choose this work</string>
    <string name="delete_work">Delete work</string>
    <string name="accepted_failed">Refused successfully!</string>
    <string name="choose_start_date">Choose the start date</string>
    <string name="choose_end_date">Choose the end date</string>
    <string name="my_profile">My Profile</string>
    <string name="work_capability">WORK CAPABILITY</string>
    <string name="reportempty">Please fill in the report</string>
    <string name="congviecdahoanthanh">Work completed</string>
    <string name="vuilongdangnhap">Please sign in to see more details</string>
    <string name="chiaseungdung">Share App</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="share">Share</string>
    <string name="no_internet">No internet connection</string>
    <string name="invalid">Invalid Username or Password</string>
    <string name="connection_error">Failed to connect to the Internet!</string>
    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>
    <string name="confirm_message">Do you want to sign up before leaving?</string>
    <string name="schedule_duplicated_choose_maid">This applicant has applied for another task at the same time of working. Please choose another!</string>
    <string name="near_by_job_list">List</string>
    <string name="near_by_job_map">Map</string>
    <string name="near_by_job_filter">Advanced search</string>
    <string name="near_by_filter_location">Location</string>
    <string name="near_by_filter_distance">Distance</string>
    <string name="near_by_filter_type_job">Type of work</string>
    <string name="near_by_filter_update">Update</string>
    <string name="near_by_filter_type_job_all">All</string>
    <string name="near_by_filter_current_location">Here</string>
    <string name="near_by_filter_current_location_new_posts">New posts</string>
    <string name="near_by_filter_current_location_start_date">Start date</string>
    <string name="dialog_title">Message</string>
    <string name="signin_loading">Loading...</string>
    <string name="dialog_button_confirm_no">No</string>
    <string name="dialog_button_confirm_yes">Yes</string>
    <string name="dialog_button_close">Close</string>
    <string name="no_result_found">No results found!</string>
    <string name="delete">Xóa</string>
    <string name="status_8">Your are chosen for this work</string>
    <string name="status_89">You can start your work now!</string>
    <string name="status_99">New work just posted!</string>
    <string name="status_5">Work done!</string>
    <string name="status_6">A direct request just sent to you!</string>
</resources>