<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_720"
    tools:context="com.hbbsolution.maid.main.view.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack_transparent"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/space_256"
        android:layout_height="@dimen/space_256"
        android:src="@color/colorWhite"
        android:layout_marginRight="@dimen/margin_padding_20dp"
        android:layout_marginTop="@dimen/margin_padding_20dp"
        android:layout_alignParentRight="true"/>
    <RelativeLayout
        android:id="@+id/rlAvatar"
        android:layout_width="@dimen/space_256"
        android:layout_height="@dimen/space_256"
        android:layout_marginRight="@dimen/margin_padding_20dp"
        android:layout_marginTop="@dimen/margin_padding_20dp"
        android:layout_alignParentRight="true"
        android:padding="2dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_padding_30dp"
        android:layout_marginRight="@dimen/margin_padding_30dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_padding_40dp"
        android:layout_below="@id/rlAvatar">


        <Button
            android:id="@+id/lo_maid_around"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_20dp"
            android:background="@drawable/background_home_maid_around"
            android:text="@string/home_maid_around"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/lo_your_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_20dp"
            android:background="@drawable/background_home_work_managment"
            android:text="@string/home_your_tasks"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/lo_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_20dp"
            android:background="@drawable/background_home_history"
            android:text="@string/home_history"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
