<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/toolbar_theme">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/near_by_job_filter"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/TEXT_SIZE_NORMAL"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/color_line_view" />

    <RelativeLayout
        android:id="@+id/relative_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView_location_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/near_by_filter_location"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/TEXT_SIZE_NORMAL" />

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/ic_location"
            android:layout_toRightOf="@+id/textView_location_header"
            android:gravity="right" />

        <com.hbbsolution.maid.base.IconTextView
            android:id="@+id/ic_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/ion_chevron_right"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/icon_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/color_line_view" />

    <RelativeLayout
        android:id="@+id/relative_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView_distance_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/near_by_filter_distance"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/TEXT_SIZE_NORMAL" />

        <TextView
            android:id="@+id/textView_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/ic_distance"
            android:layout_toRightOf="@+id/textView_distance_header"
            android:gravity="right" />

        <com.hbbsolution.maid.base.IconTextView
            android:id="@+id/ic_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/ion_chevron_right"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/icon_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/color_line_view" />

    <RelativeLayout
        android:id="@+id/relative_type_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView_type_job_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/near_by_filter_type_job"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/TEXT_SIZE_NORMAL" />

        <TextView
            android:id="@+id/textView_type_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/ic_type_job"
            android:layout_toRightOf="@+id/textView_type_job_header"
            android:gravity="right" />

        <com.hbbsolution.maid.base.IconTextView
            android:id="@+id/ic_type_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text="@string/ion_chevron_right"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/icon_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/color_line_view" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/dialog_box_button_alone"
        android:text="@string/near_by_filter_update"
        android:textColor="@color/colorPrimary" />
</LinearLayout>